--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.18.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "sass": "^1.68.0"
   },
   "devDependencies": {
