--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
-    "sass": "^1.68.0"
+    "sass": "^1.68.0",
+    "sonner": "^1.4.3"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
