--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
+    "react-scroll": "^1.9.0",
     "sass": "^1.68.0",
     "sonner": "^1.4.3"
   },
